# manna-protocol

./: .gitignore  Anchor.toml  HACKATHON_STATUS.md  README.md  package.json  tsconfig.json
app/: package-lock.json  package.json
app/src/pages/: _app.tsx  index.tsx
app/src/styles/: globals.css
docs/: API.md  ARCHITECTURE.md  WHITEPAPER.md
programs/manna/: Cargo.toml
programs/manna/src/: constants.rs  errors.rs  lib.rs
programs/manna/src/instructions/: borrow.rs  close_vault.rs  deposit_collateral.rs  initialize.rs  liquidate.rs  mod.rs  open_vault.rs  redeem.rs  repay.rs  stability_deposit.rs  stability_withdraw.rs  withdraw_collateral.rs
programs/manna/src/state/: global_state.rs  mod.rs  stability_pool.rs  vault.rs
sdk/src/: index.ts
tests/: manna.ts
