[package]
name = "manna"
version = "0.1.0"
description = "Decentralized borrowing protocol on Solana - mint USDsol against SOL collateral"
edition = "2021"
license = "MIT"
repository = "https://github.com/bobby-ai-dev/manna-protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "manna"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
# pyth-solana-receiver-sdk = "0.3.0"  # Temporarily disabled due to version conflict

[dev-dependencies]
anchor-client = "0.30.1"
